--- a/finder-app/makefile
+++ b/finder-app/makefile
@@ -1,5 +1,5 @@
 # Set Compiler
-CC = aarch64-none-linux-gnu-
+CC=gcc
 
 
 
@@ -12,10 +12,10 @@ all: writer
 	@echo "Build done!"
 
 writer: writer.o
-	$(CC)gcc $(FLAGS) writer.o -o writer
+	$(CC) $(FLAGS) writer.o -o writer
 
 writer.o: writer.c
-	$(CC)gcc $(FLAGS) -c writer.c -o writer.o
+	$(CC) $(FLAGS) -c writer.c -o writer.o
 
 clean:
 	rm -f *.o *.out writer
